# camera-gui

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  run.sh
camera_visualizer/: __init__.py  gui.py  gui_double.py  paths.py  serializer.py  visualizer.py
camera_visualizer/camera_interface/: ic4_interface.py  mock_interface.py  tis_interface.py  v4l2_interface.py  v4l2_interface_old.py  ximea_interface.py
camera_visualizer/scripts/: tis_mwe.py  tisgrabber_mwe.py  ximea_mwe.py
camera_visualizer/scripts/tis/: step05_live_stream.py  step08_exposure_time.py
data/docs/: tis.md  ximea.md
data/plate_design/: scaled_holed_plate.blend  scaled_holed_plate.gx  scaled_holed_plate.stl  scaled_plate.blend
scripts/: tisgrabber_device.py  v4l_mwe.py
scripts/tis/: step04_grab_image.py  step08_exposure_time.py
the_imaging_source_visualizer/: step01_discover_device.py  step02_device_enumeration.py  step03_configure_video_capture.py  step04_grab_image.py  step05_live_stream.py
tis_visualizer/: tis_interface.py  tis_mwe.py  v4l2_interface.py
tis_visualizer/scripts/: step02_device_enumeration.py  step04_grab_image.py  step06_gst_streamer.py  step06_v4l2_mwe.py
ximea_visualizer/: gui.py  gui_double.py  main.py  mock_interface.py  tis_interface.py  tis_mwe.py  visualizer.py  ximea_interface.py  ximea_mwe.py
