[project]
name = "ximea-visualizer"
version = "0.1.0"
description = "User friendly XIMEA visualizer."
authors = [{name="Daniele Picone", email="danaroth83@gmail.com"}]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "imagingcontrol4>=1.3.0.3125",
    "matplotlib>=3.10.3",
    "numpy>=2.3.2",
    "pyqt5>=5.15.11; sys_platform=='linux'",
    "spectral>=0.24",
]

[project.optional-dependencies]
dev = [
    "uv>=0.8.3",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["ximea_visualizer*"]


[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"


