[project]
name = "camera-visualizer"
version = "0.1.0"
description = "User-friendly API-independent programmable camera GUI."
authors = [{name="Daniele Picone", email="danaroth83@gmail.com"}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dotenv>=0.9.9",
    "imagingcontrol4>=1.3.0.3125",
    "matplotlib>=3.10.5",
    "numpy>=2.2.6",
    "pyqt5>=5.15.11",
    "spectral>=0.24",
]

[project.optional-dependencies]
dev = [
    "uv>=0.8.4",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["camera_visualizer*"]


[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"


